--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@tanstack/react-query-devtools": "^4.24.4",
     "@types/react-helmet": "^6.1.6",
     "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "gh-pages": "^5.0.0"
   }
 }
